--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,8 @@ Title: Automatically Search Errors or Warnings
 Version: 0.0.1
 Authors@R: c(person("James", "Balamuta", 
                      email = "balamut2@illinois.edu", role = c("aut", "cre")))
-Description: This package provides shims to obtain errors and warnings that
-    occur during execution of code to automatically search the contents.
+Description: Provides environment hooks that obtain errors and warnings which
+    occur during the execution of code to automatically search for solutions.
 URL: https://github.com/coatless/errorist
 BugReports: https://github.com/coatless/errorist/issues
 Depends: R (>= 3.0.0)
