--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,12 @@ BugReports: https://github.com/coatless/errorist/issues
 Depends: R (>= 3.0.0)
 Imports: searcher (>= 0.0.2)
 Suggests: testthat,
-    covr
+    covr,
+    knitr,
+    rmarkdown
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
+VignetteBuilder: knitr
