--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: errorist
 Title: Automatically Search Errors or Warnings
 Version: 0.0.1.1000
-Authors@R: c(person("James", "Balamuta", 
-                     email = "balamut2@illinois.edu", role = c("aut", "cre")))
+Authors@R: c(person("James", "Balamuta", email = "balamut2@illinois.edu", role = c("aut", "cre", "cph"),
+                    comment = c(ORCID = "0000-0003-2826-8458"))
+            )
 Description: Provides environment hooks that obtain errors and warnings which
     occur during the execution of code to automatically search for solutions.
 URL: https://github.com/coatless/errorist
@@ -16,6 +17,6 @@ Suggests: testthat,
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
