--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,4 @@ export(disable_warning_shim)
 export(enable_error_shim)
 export(enable_errorist)
 export(enable_warning_shim)
+importFrom(searcher,search_google)
