--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,17 @@
 Package: errorist
 Title: Automatically Search Errors or Warnings
-Version: 0.0.2
-Authors@R: c(person("James", "Balamuta", email = "balamut2@illinois.edu", role = c("aut", "cre", "cph"),
-                    comment = c(ORCID = "0000-0003-2826-8458"))
+Version: 0.1.0
+Authors@R: c(
+             person("James", "Balamuta", 
+                    email = "balamut2@illinois.edu", 
+                    role = c("aut", "cre", "cph"),
+                    comment = c(ORCID = "0000-0003-2826-8458")
+                    )
             )
 Description: Provides environment hooks that obtain errors and warnings which
     occur during the execution of code to automatically search for solutions.
-URL: https://github.com/coatless/errorist
-BugReports: https://github.com/coatless/errorist/issues
+URL: https://github.com/r-assist/errorist
+BugReports: https://github.com/r-assist/errorist/issues
 Depends: R (>= 3.0.0)
 Imports: searcher (>= 0.0.2)
 Suggests: testthat,
@@ -17,6 +21,6 @@ Suggests: testthat,
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.2
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
