--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: errorist
 Title: Automatically Search Errors or Warnings
-Version: 0.1.1
+Version: 0.1.2
 Authors@R: c(
              person("James", "Balamuta", 
                     email = "balamut2@illinois.edu", 
@@ -10,8 +10,8 @@ Authors@R: c(
             )
 Description: Provides environment hooks that obtain errors and warnings which
     occur during the execution of code to automatically search for solutions.
-URL: https://github.com/r-assist/errorist
-BugReports: https://github.com/r-assist/errorist/issues
+URL: https://github.com/coatless-rpkg/errorist, http://r-pkg.thecoatlessprofessor.com/errorist/
+BugReports: https://github.com/coatless-rpkg/errorist/issues
 Depends: R (>= 3.0.0)
 Imports: searcher (>= 0.0.2)
 Suggests: testthat,
