--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
             )
 Description: Provides environment hooks that obtain errors and warnings which
     occur during the execution of code to automatically search for solutions.
-URL: https://github.com/coatless-rpkg/errorist, http://r-pkg.thecoatlessprofessor.com/errorist/
+URL: https://github.com/coatless-rpkg/errorist, https://r-pkg.thecoatlessprofessor.com/errorist/
 BugReports: https://github.com/coatless-rpkg/errorist/issues
 Depends: R (>= 3.0.0)
 Imports: searcher (>= 0.0.2)
