--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: http://r-pkg.thecoatlessprofessor.com/errorist/
+url: https://r-pkg.thecoatlessprofessor.com/errorist/
 template:
   bootstrap: 5
 
